--- a/job-detail.html
+++ b/job-detail.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap-select.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/search.css">
+    <!-- <link rel="stylesheet" href="./assets/css/search.css"> -->
 </head>
 
 <body>
@@ -212,7 +212,7 @@
             </div>
         </section>
         <!-- End Search Job -->
-        <!-- Search Result -->
+        <!-- Job Detail  -->
         <section class=" mt-2 mb-5">
             <div class="container">
                 <ul class="breadcrumb breadcrumb-custom">
@@ -222,9 +222,177 @@
                 </ul>
 
             </div>
+            <div class="box-job-detail">
+                <div class="container">
+                    <div class="row p-2 bg-white">
+                        <div class="col-sm-9">
+                            <div class="row ">
+                                <div class="col-sm-3">
+                                    <div class="logo-company text-center">
+                                        <a href="#" title="Công ty Tài chính TNHH MB SHINSEI (Mcredit)">
+                                            <img class="img-fluid" src="./assets/images/company/mb-company.jpg" alt="Công ty Tài chính TNHH MB SHINSEI (Mcredit)">
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-9 mt-2">
+                                    <h1 class=" fs-4 fw-bold text-default">NHÂN VIÊN THU HỒI NỢ QUA ĐIỆN THOẠI LÀM VIỆC TẠI HÀ NỘI</h1>
+                                    <div class="company-title mb-2">
+                                        <span><a href="#" class="text-dark text-decoration-none  fw-bold">Công ty Tài chính TNHH MB SHINSEI (Mcredit)</a></span>
+                                    </div>
+                                    <div class="text-secondary" style="margin-bottom: 10px;">
+                                        Tầng 12, Tòa nhà TNR Tower, 54 Nguyễn Chí Thanh, Đống Đa, Hà Nội
+                                    </div>
+                                </div>
 
+                            </div>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="text-center py-2">
+                                <p><a href="#" class="btn btn-item">ỨNG TUYỂN NGAY</a></p>
+                                <div class="">
+                                    <a class="btn border px-5 " href="#"><i class="fa fa-heart"></i> Lưu tin</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="container ">
+                <div class="d-flex flex-row bd-highlight ">
+                    <div class="row">
+
+                        <div class="mt-2 mb-1 col-12  bd-highlight nav-custom-job-detail"><a href="" class="px-4 py-2 nav-link text-dark">TIN TUYỂN DỤNG</a></div>
+                        <div class="mt-2  mb-1 col-12 bd-highlight nav-custom-job-detail"><a href="" class=" px-4 py-2 nav-link text-dark">CÔNG TY</a></div>
+                        <div class=" mt-2 mb-1 col-12 bd-highlight nav-custom-job-detail"><a href="" class=" px-4 py-2 nav-link text-dark">VIỆC LÀM CÙNG CÔNG TY</a></div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="container tab-content clearfix">
+                <div class="job-desc p-4 bg-white">
+                    <div class="row">
+                        <div class="col-md-8 col-sm-12">
+                            <h2 class="fw-bold fs-4">Mô tả công việc</h2>
+                            <p>- Gọi điện thoại cho khách hàng/người thân khách hàng yêu cầu khách hàng/hỗ trợ nhắc khách hàng thanh toán nợ quá hạn và hướng dẫn khách hàng phương thức thanh toán (Nhóm khách hàng quá hạn 30 ngày trở lên nhóm B2-B3)
+                            </p>
+                            <p>- Gọi điện thoại thông báo cho khách hàng/người thân khách hàng biết về các khoản phí phạt phát sinh nếu khách hàng chậm thanh toán
+                            </p>
+                            <p>- Cập nhật kết quả cuộc gọi vào hệ thống
+                            </p>
+                            <p>- Báo cáo lên Trưởng nhóm các trường hợp khách hàng không có thiện chí thanh toán hoặc có biểu hiện gian lận
+                            </p>
+                            <p>- Thực hiện các công việc khác theo phân công của Quản lý trực tiếp và Trưởng phòng Thu hồi nợ qua điện thoại</p>
+                            <h2 class="fw-bold fs-4">Yêu cầu ứng viên</h2>
+                            <p>- Nam/ nữ, tốt nghiệp THPT (12/12) trở lên
+                            </p>
+                            <p>- Có kinh nghiệm giao tiếp với khách hàng qua điện thoại như telesales, telemarketing, thu hồi nợ qua điện thoại, chăm sóc khách hàng, tổng đài viên,... là một lợi thế;
+                            </p>
+                            <p>- Không có tiền án, tiền sự, không có nợ xấu tại các tổ chức Tín dụng/ Tài chính/ Ngân hàng
+                            </p>
+                            <p>- Giao tiếp tốt, phong cách chuyên nghiệp
+                            </p>
+                            <p>- Kỹ năng tin học văn phòng cơ bản
+                            </p>
+                            <p>- Chịu được áp lực làm việc cao
+                            </p>
+                            <p>Làm việc tại:
+                            </p>
+                            <p>Hà Nội: Tòa nhà Trường Thịnh, Số 1 Phùng Chí Kiên, Cầu Giấy, Hà Nội
+                            </p>
+                            <h2 class="fw-bold fs-4">Quyền lợi được hưởng</h2>
+                            <p>- Mức hưởng hoa hồng không giới hạn (Vượt trội so với các nhóm nợ khác)
+                            </p>
+                            <p>- Lương cạnh tranh, hưởng 100% lương trong thời gian thử việc
+                            </p>
+                            <p>- Thưởng Lễ, Tết, tháng lương thứ 13 tùy kết quả hoạt động kinh doanh của từng năm
+                            </p>
+                            <p>- Được tham gia Bảo hiểm theo Luật định
+                            </p>
+                            <p>- Được công ty mua thêm gói bảo hiểm MIC
+                            </p>
+                            <h2 class="fw-bold fs-4">Cách thức ứng tuyển</h2>
+                            <p>Ứng viên nộp hồ sơ trực tuyến bằng cách bấm <strong class="text-default">Ứng tuyển ngay</strong> dưới đây.</p>
+                            <div class="text-center">
+                                <div class="text-center">
+                                    <p style="margin-bottom: 0px"><a href="#" class="btn btn-item ">ỨNG TUYỂN NGAY</a></p>
+                                    <p class="text-secondary">Hạn nộp hồ sơ: 24/02/2021</p>
+                                </div>
+                            </div>
+                            <div class="box-report ">
+                                <div class=" text-center text-secondary">
+                                    <a href="#" class="nav-link"><i class="fa fa-warning text-danger"></i> Phản ánh tin tuyển dụng không chính xác</a>
+                                </div>
+                            </div>
+                            <hr>
+                            <div>
+                                <h4>Ngành nghề</h4>
+                                <span>
+                                <a href="#" class="btn btn-sm fw-normal mt-1 btn-default text-secondary" target="_blank" style="background-color: #fafafa; border-color: #dfdfdf; ">Dịch vụ khách hàng</a>
+                                </span>
+                                <span>
+                                    <a href="#" class="btn btn-sm fw-normal mt-1 btn-default text-secondary" target="_blank" style="background-color: #fafafa; border-color: #dfdfdf; ">Ngân hàng / Tài chính</a>
+                                    </span>
+                                <span>
+                                        <a href="#" class="btn btn-sm fw-normal mt-1 btn-default text-secondary" target="_blank" style="background-color: #fafafa; border-color: #dfdfdf; ">Luật/Pháp lý</a>
+                                        </span>
+
+                            </div>
+                            <div style="margin-top: 20px;">
+                                <a href="#" target="_blank">
+                                    <img src="./assets/images/banner/job-detail-mau-cv.jpg" alt="" class="img-fluid" style="width: 100%">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-sm-12">
+                            <div class="right-desc-job">
+                                <div class="header-title ">
+                                    <h2 class="text-ellipsis ">
+                                        VIỆC LÀM LIÊN QUAN
+                                    </h2>
+                                    <div class="attr-list-job ">
+                                        <div class="bg-list-job ">
+                                            <div class="job-item ">
+
+                                                <div class="row ">
+                                                    <div class="col-3 ">
+                                                        <a href="# " title=" ">
+                                                            <img src="./assets/images/company/company3.webp " alt="company3 " class="img-fluid ">
+                                                        </a>
+                                                    </div>
+                                                    <div class="col-9 pt-3 ">
+                                                        <div class="list-job-box ">
+                                                            <div class="title text-ellipsis ">
+                                                                <a href="# " target="_blank ">
+                                                                    <span title="Nhân Viên Marketing Facebook Ads (Hà Nội - Hồ Chí Minh) "><strong class="fw-bold ">
+                                                                            Nhân Viên Marketing Facebook Ads (Hà Nội - Hồ Chí Minh)</strong></span>
+                                                                </a>
+                                                                <div class="company text-ellipsis">
+                                                                    <a href="">
+                                                                        <span title="CÔNG TY CỔ PHẦN CEO VIỆT NAM HOLDING">
+                                                                            Công ty Cổ phần đầu tư Bất động sản Happyland</span>
+                                                                    </a>
+                                                                </div>
+                                                            </div>
+
+
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+                                            </div>
+
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
-        <!-- End Search Result -->
+        <!-- End Job Detail -->
 
     </section>
     <!-- Footer -->
